# claude-code-devcontainer

./: .gitignore  CLAUDE.md
analysis/: final_report.md  log.md  pyproject.toml
analysis/data/: data.csv  generate_data.py  stan_data.json  student_scores.csv  true_parameters.json
analysis/eda/: 01_data_loading.py  02_univariate_analysis.py  03_relationships.py  04_grouping_temporal.py  05_missing_outliers.py  eda_report.md  quality_summary.csv  univariate_summary.csv
analysis/eda/analyst_1/: data_quality.py  eda_report.md  generative_stories.py  load_data.py  quality_summary.csv  school_treatment_effects.csv  treatment_effects.py  univariate_analysis.py  univariate_summary.csv
analysis/eda/analyst_2/: 01_load_and_quality.py  02_school_structure.py  03_variance_components.py  04_plot_school_distributions.py  05_plot_treatment_effects.py  eda_report.md  quality_summary.csv  school_summary.csv  school_treatment_effects.csv  univariate_summary.csv  variance_components.csv
analysis/experiments/: class_a_comparison.csv  class_a_summary.json  experiment_plan.md  population_assessment.md
analysis/experiments/designer_1/: experiment_plan.md  model_proposals.md
analysis/experiments/designer_2/: experiment_plan.md  model_proposals.md
analysis/experiments/designer_3/: model_proposals.md
analysis/experiments/experiment_1/: complete_pooling_prior  complete_pooling_prior.stan  model  model.stan
shared_utils/: .gitignore  pyproject.toml
shared_utils/tests/: test_diagnostics.py  test_e2e_stan.py  test_init.py  test_io.py  test_paths.py  test_stan.py
(+162 files in other folders)
