[project]
name = "analysis"
version = "0.1.0"
description = "Bayesian data analysis project"
requires-python = ">=3.10"
dependencies = [
    "shared-utils",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
]

[tool.uv.sources]
shared-utils = { path = "../shared_utils", editable = true }

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.400",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
