[project]
name = "shared-utils"
version = "0.1.0"
description = "Shared utilities for Bayesian modeling with Stan"
readme = "README.md"
authors = [
    { name = "Xianda Sun", email = "sunxdt@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.17.0",
    "cmdstanpy>=1.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.400",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_utils"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
